# melo

./: .gitignore  .travis.yml  LICENSE  README.rst  compile-docs.sh  melo.py  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: tests.yml
doc/: compile.sh  conf.py  example.rst  examples.rst  index.rst  plot_tests.py  tests.rst  theory.rst  usage.rst
docs/: conf.py  deploy-key.enc  deploy_script.sh  example.rst  index.rst  tests.rst  usage.rst
docs/_templates/: layout.html
melo/: __init__.py  dist.py  melo.py
melo/test/: test.py
src/melo/: __init__.py  dist.py  melo.py
tests/: test_melo.py
