[metadata]
name = melo
version = attr: melo.__version__
description = Margin dependent Elo ratings and predictions.
long_description = file: README.rst
long_description_content_type = text/reStructuredText
author = J. Scott Moreland
author_email = morelandjs@gmail.com
url = 'https://github.com/melo.git'
license = 'MIT',
platforms = any
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
  =src
setup_requires =
  pytest-runner
install_requires =
  numpy
  scipy >= 0.18.0
tests_require =
  pytest

[options.packages.find]
where = src
exclude = tests

[test]
addopts = tests

[tool.pytest]
minversion = 6.0
addopts = tests --verbose -s
norecursedirs =
  dist
  build
  .tox

[aliases]
tests = pytest
docs = build_sphinx

[bdist_wheel]
universal = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[flake8]
max-line-length = 80
doctests = True
exclude = .git, .eggs, .pyc, tests, docs, dist, _build
